--- a/regions/snowy.json
+++ b/regions/snowy.json
@@ -1,6 +1,8 @@
 {
-    "rarity": 1,
-    "beach": "frozen_beach",
     "name": "Snowy",
-    "frozen": true
+    "beach": "beach",
+    "ocean": "ocean",
+    "lake": "lake",
+    "lakeBeach": "beach",
+    "channel": "channel"
 }
