Tune up biome heights

--- a/regions/snowy.json
+++ b/regions/snowy.json
@@ -1,8 +1,8 @@
 {
     "name": "Snowy",
-    "beach": "beach",
-    "ocean": "ocean",
-    "lake": "lake",
-    "lakeBeach": "beach",
-    "channel": "channel"
+    "beach": "frozen_beach",
+    "ocean": "frozen_ocean",
+    "lake": "frozen_lake",
+    "shore": "frozen_shore",
+    "channel": "frozen_channel"
 }
