--- a/regions/snowy.json
+++ b/regions/snowy.json
@@ -2,6 +2,7 @@
     "name": "Snowy",
     "beach": "frozen_beach",
     "ocean": "frozen_ocean",
+    "deepOcean": "deep_ocean",
     "lake": "frozen_lake",
     "shore": "frozen_shore",
     "channel": "frozen_channel"
