--- a/overworld/loot/cold-treasure.json
+++ b/overworld/loot/cold-treasure.json
@@ -31,6 +31,54 @@
             "maxAmount": 3,
             "rarity": 11,
             "slotTypes": "STORAGE"
+        },
+        {
+            "type": "LEATHER_LEGGINGS",
+            "maxAmount": 1,
+            "rarity": 37,
+            "minDurability": 0.93,
+            "maxDurability": 1,
+            "displayName": "Lucky Pyro Pants",
+            "lore": [
+                "The perfect pants to wear while ",
+                "burning oneself or diving into an ",
+                "explosion. They're a bit lucky too."
+            ],
+            "enchantments": [
+                {
+                    "enchantment": "PROTECTION_EXPLOSIONS",
+                    "maxLevel": 7,
+                    "minLevel": 3
+                },
+                {
+                    "enchantment": "PROTECTION_FIRE",
+                    "maxLevel": 7,
+                    "minLevel": 3
+                }
+            ],
+            "attributes": [
+                {
+                    "attribute": "GENERIC_LUCK",
+                    "operation": "ADD_NUMBER",
+                    "maxAmount": 0.1,
+                    "minAmount": 0.07,
+                    "name": "LUCK"
+                },
+                {
+                    "attribute": "GENERIC_ARMOR",
+                    "operation": "ADD_NUMBER",
+                    "maxAmount": 4,
+                    "minAmount": 2,
+                    "name": "RRM"
+                }
+            ],
+            "itemFlags": [
+                "HIDE_ATTRIBUTES",
+                "HIDE_ENCHANTS",
+                "HIDE_PLACED_ON",
+                "HIDE_POTION_EFFECTS"
+            ],
+            "slotTypes": "STORAGE"
         }
     ]
 }
