--- a/overworld/loot/global-treasure.json
+++ b/overworld/loot/global-treasure.json
@@ -9,15 +9,27 @@
             "slotTypes": "STORAGE"
         },
         {
-            "type": "IRON_INGOT",
+            "type": "ENDER_PEARL",
             "maxAmount": 3,
-            "rarity": 12,
+            "rarity": 28,
+            "slotTypes": "STORAGE"
+        },
+        {
+            "type": "NAME_TAG",
+            "maxAmount": 1,
+            "rarity": 36,
+            "slotTypes": "STORAGE"
+        },
+        {
+            "type": "IRON_INGOT",
+            "maxAmount": 5,
+            "rarity": 6,
             "slotTypes": "STORAGE"
         },
         {
             "type": "IRON_NUGGET",
             "maxAmount": 7,
-            "rarity": 10,
+            "rarity": 4,
             "slotTypes": "STORAGE"
         },
         {
