--- a/overworld/loot/global-treasure.json
+++ b/overworld/loot/global-treasure.json
@@ -1,6 +1,7 @@
 {
     "name": "Global Treasure",
-    "rarity": 7,
+    "rarity": 1,
+    "maxPicked": 2,
     "loot": [
         {
             "type": "DIAMOND",
