--- a/loot/global-treasure.json
+++ b/loot/global-treasure.json
@@ -6,37 +6,43 @@
         {
             "type": "DIAMOND",
             "maxAmount": 5,
-            "rarity": 11,
+            "rarity": 6,
             "slotTypes": "STORAGE"
         },
         {
             "type": "ENDER_PEARL",
             "maxAmount": 3,
-            "rarity": 28,
+            "rarity": 9,
             "slotTypes": "STORAGE"
         },
         {
             "type": "NAME_TAG",
             "maxAmount": 1,
-            "rarity": 36,
+            "rarity": 12,
             "slotTypes": "STORAGE"
         },
         {
             "type": "IRON_INGOT",
             "maxAmount": 5,
-            "rarity": 6,
+            "rarity": 3,
             "slotTypes": "STORAGE"
         },
         {
             "type": "IRON_NUGGET",
             "maxAmount": 7,
-            "rarity": 4,
+            "rarity": 1,
+            "slotTypes": "STORAGE"
+        },
+        {
+            "type": "GOLD_NUGGET",
+            "maxAmount": 6,
+            "rarity": 2,
             "slotTypes": "STORAGE"
         },
         {
             "type": "REDSTONE",
             "maxAmount": 11,
-            "rarity": 9,
+            "rarity": 4,
             "slotTypes": "STORAGE"
         }
     ]
