Adjust loot & fix syntax

--- a/loot/cold-treasure.json
+++ b/loot/cold-treasure.json
@@ -1,39 +1,40 @@
 {
     "name": "Cold Treasure",
     "rarity": 1,
+    "minPicked": 0,
     "loot": [
         {
-            "type": "IRON_NUGGET",
+            "type": "iron_nugget",
             "maxAmount": 12,
             "rarity": 3,
             "slotTypes": "STORAGE"
         },
         {
-            "type": "IRON_INGOT",
+            "type": "iron_ingot",
             "maxAmount": 5,
             "rarity": 4,
             "slotTypes": "STORAGE"
         },
         {
-            "type": "EMERALD",
-            "maxAmount": 5,
+            "type": "emerald",
+            "maxamount": 5,
             "rarity": 6,
-            "slotTypes": "STORAGE"
+            "slottypes": "STORAGE"
         },
         {
-            "type": "EMERALD_BLOCK",
-            "maxAmount": 2,
+            "type": "emerald_block",
+            "maxamount": 2,
             "rarity": 14,
-            "slotTypes": "STORAGE"
+            "slottypes": "STORAGE"
         },
         {
-            "type": "IRON_BLOCK",
-            "maxAmount": 3,
+            "type": "iron_block",
+            "maxamount": 3,
             "rarity": 11,
-            "slotTypes": "STORAGE"
+            "slottypes": "STORAGE"
         },
         {
-            "type": "LEATHER_LEGGINGS",
+            "type": "leather_leggings",
             "maxAmount": 1,
             "rarity": 97,
             "minDurability": 0.93,
