--- a/loot/global-treasure.json
+++ b/loot/global-treasure.json
@@ -1,49 +1,50 @@
 {
     "name": "Global Treasure",
     "rarity": 1,
-    "maxPicked": 2,
+    "maxPicked": 1,
+    "minPicked": 0,
     "loot": [
         {
-            "type": "DIAMOND",
-            "maxAmount": 5,
+            "type": "diamond",
+            "maxamount": 5,
             "rarity": 6,
-            "slotTypes": "STORAGE"
+            "slottypes": "STORAGE"
         },
         {
-            "type": "ENDER_PEARL",
-            "maxAmount": 3,
+            "type": "ender_pearl",
+            "maxamount": 3,
             "rarity": 9,
-            "slotTypes": "STORAGE"
+            "slottypes": "STORAGE"
         },
         {
-            "type": "NAME_TAG",
-            "maxAmount": 1,
+            "type": "name_tag",
+            "maxamount": 1,
             "rarity": 12,
-            "slotTypes": "STORAGE"
+            "slottypes": "STORAGE"
         },
         {
-            "type": "IRON_INGOT",
-            "maxAmount": 5,
+            "type": "iron_ingot",
+            "maxamount": 5,
             "rarity": 3,
-            "slotTypes": "STORAGE"
+            "slottypes": "STORAGE"
         },
         {
-            "type": "IRON_NUGGET",
-            "maxAmount": 7,
+            "type": "iron_nugget",
+            "maxamount": 7,
             "rarity": 1,
-            "slotTypes": "STORAGE"
+            "slottypes": "STORAGE"
         },
         {
-            "type": "GOLD_NUGGET",
-            "maxAmount": 6,
+            "type": "gold_nugget",
+            "maxamount": 6,
             "rarity": 2,
-            "slotTypes": "STORAGE"
+            "slottypes": "STORAGE"
         },
         {
-            "type": "REDSTONE",
-            "maxAmount": 11,
+            "type": "redstone",
+            "maxamount": 11,
             "rarity": 4,
-            "slotTypes": "STORAGE"
+            "slottypes": "STORAGE"
         }
     ]
 }
