--- a/loot/hot-treasure.json
+++ b/loot/hot-treasure.json
@@ -1,33 +1,34 @@
 {
     "name": "Hot Treasure",
     "rarity": 1,
+    "minPicked": 0,
     "loot": [
         {
-            "type": "LAPIS_LAZULI",
+            "type": "lapis_lazuli",
             "maxAmount": 12,
             "rarity": 3,
             "slotTypes": "STORAGE"
         },
         {
-            "type": "GOLD_INGOT",
+            "type": "gold_ingot",
             "maxAmount": 5,
             "rarity": 5,
             "slotTypes": "STORAGE"
         },
         {
-            "type": "GOLD_NUGGET",
+            "type": "gold_nugget",
             "maxAmount": 8,
             "rarity": 4,
             "slotTypes": "STORAGE"
         },
         {
-            "type": "BLAZE_POWDER",
+            "type": "blaze_powder",
             "maxAmount": 1,
             "rarity": 38,
             "slotTypes": "STORAGE"
         },
         {
-            "type": "GOLDEN_BOOTS",
+            "type": "golden_boots",
             "maxAmount": 1,
             "rarity": 85,
             "minDurability": 0.93,
