--- a/loot/tropical-treasure.json
+++ b/loot/tropical-treasure.json
@@ -1,15 +1,16 @@
 {
     "name": "Tropical Treasure",
     "rarity": 6,
+    "minPicked": 0,
     "loot": [
         {
-            "type": "GLISTERING_MELON_SLICE",
+            "type": "glistering_melon_slice",
             "maxAmount": 1,
             "rarity": 7,
             "slotTypes": "STORAGE"
         },
         {
-            "type": "REPEATER",
+            "type": "repeater",
             "maxAmount": 3,
             "rarity": 22,
             "slotTypes": "STORAGE"
