--- a/loot/snow-clutter.json
+++ b/loot/snow-clutter.json
@@ -3,19 +3,19 @@
     "rarity": 3,
     "loot": [
         {
-            "type": "SNOWBALL",
+            "type": "snowball",
             "maxAmount": 9,
             "rarity": 3,
             "slotTypes": "STORAGE"
         },
         {
-            "type": "PACKED_ICE",
+            "type": "packed_ice",
             "maxAmount": 3,
             "rarity": 5,
             "slotTypes": "STORAGE"
         },
         {
-            "type": "BLUE_ICE",
+            "type": "blue_ice",
             "maxAmount": 2,
             "rarity": 9,
             "slotTypes": "STORAGE"
