--- a/jigsaw-pieces/village/snowy/houses/snowy_medium_house_1.json
+++ b/jigsaw-pieces/village/snowy/houses/snowy_medium_house_1.json
@@ -5,7 +5,7 @@
             "innerConnector": false,
             "rotateConnector": false,
             "name": "minecraft:bottom",
-            "pools": ["village/snowy/villagers"],
+            "spawnEntity": "villager",
             "position": {
                 "x": 0,
                 "y": -3,
@@ -18,7 +18,7 @@
             "innerConnector": false,
             "rotateConnector": false,
             "name": "minecraft:bottom",
-            "pools": ["village/snowy/villagers"],
+            "spawnEntity": "villager",
             "position": {
                 "x": 0,
                 "y": -3,
