--- a/jigsaw-pieces/village/snowy/houses/snowy_medium_house_2.json
+++ b/jigsaw-pieces/village/snowy/houses/snowy_medium_house_2.json
@@ -5,7 +5,7 @@
             "innerConnector": false,
             "rotateConnector": false,
             "name": "minecraft:bottom",
-            "pools": ["village/snowy/villagers"],
+            "spawnEntity": "villager",
             "position": {
                 "x": -2,
                 "y": -4,
@@ -31,7 +31,7 @@
             "innerConnector": false,
             "rotateConnector": false,
             "name": "minecraft:bottom",
-            "pools": ["village/snowy/villagers"],
+            "spawnEntity": "villager",
             "position": {
                 "x": 2,
                 "y": -4,
