--- a/jigsaw-pieces/village/snowy/houses/snowy_small_house_7.json
+++ b/jigsaw-pieces/village/snowy/houses/snowy_small_house_7.json
@@ -18,7 +18,7 @@
             "innerConnector": false,
             "rotateConnector": false,
             "name": "minecraft:bottom",
-            "pools": ["village/snowy/villagers"],
+            "spawnEntity": "villager",
             "position": {
                 "x": -1,
                 "y": -3,
