--- a/jigsaw-pieces/village/snowy/houses/snowy_small_house_8.json
+++ b/jigsaw-pieces/village/snowy/houses/snowy_small_house_8.json
@@ -5,7 +5,7 @@
             "innerConnector": false,
             "rotateConnector": false,
             "name": "minecraft:bottom",
-            "pools": ["village/snowy/villagers"],
+            "spawnEntity": "villager",
             "position": {
                 "x": -1,
                 "y": -2,
