--- a/jigsaw-pieces/village/snowy/town_centers/snowy_meeting_point_1.json
+++ b/jigsaw-pieces/village/snowy/town_centers/snowy_meeting_point_1.json
@@ -18,7 +18,7 @@
             "innerConnector": false,
             "rotateConnector": false,
             "name": "minecraft:bottom",
-            "pools": ["village/snowy/villagers"],
+            "spawnEntity": "villager",
             "position": {
                 "x": -5,
                 "y": -4,
@@ -83,7 +83,7 @@
             "innerConnector": false,
             "rotateConnector": false,
             "name": "minecraft:bottom",
-            "pools": ["village/snowy/villagers"],
+            "spawnEntity": "villager",
             "position": {
                 "x": 2,
                 "y": -4,
