--- a/jigsaw-pieces/village/snowy/town_centers/snowy_meeting_point_3.json
+++ b/jigsaw-pieces/village/snowy/town_centers/snowy_meeting_point_3.json
@@ -31,7 +31,7 @@
             "innerConnector": false,
             "rotateConnector": false,
             "name": "minecraft:bottom",
-            "pools": ["village/snowy/villagers"],
+            "spawnEntity": "villager",
             "position": {
                 "x": -2,
                 "y": -3,
@@ -44,7 +44,7 @@
             "innerConnector": false,
             "rotateConnector": false,
             "name": "minecraft:bottom",
-            "pools": ["village/snowy/villagers"],
+            "spawnEntity": "villager",
             "position": {
                 "x": -2,
                 "y": -3,
