--- a/loot/global-treasure.json
+++ b/loot/global-treasure.json
@@ -1,8 +1,8 @@
 {
     "name": "Global Treasure",
     "rarity": 1,
-    "maxPicked": 1,
-    "minPicked": 0,
+    "maxPicked": 4,
+    "minPicked": 1,
     "loot": [
         {
             "type": "diamond",
@@ -19,7 +19,13 @@
         {
             "type": "name_tag",
             "maxamount": 1,
-            "rarity": 42,
+            "rarity": 10,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "obsidian",
+            "maxamount": 1,
+            "rarity": 3,
             "slottypes": "STORAGE"
         },
         {
@@ -43,6 +49,7 @@
         {
             "type": "redstone",
             "maxamount": 11,
+            "minAmount": 4,
             "rarity": 4,
             "slottypes": "STORAGE"
         }
