--- a/loot/hot-treasure.json
+++ b/loot/hot-treasure.json
@@ -1,7 +1,8 @@
 {
     "name": "Hot Treasure",
     "rarity": 1,
-    "minPicked": 0,
+    "maxPicked": 2,
+    "minPicked": 1,
     "loot": [
         {
             "type": "lapis_lazuli",
