--- a/loot/snow-clutter.json
+++ b/loot/snow-clutter.json
@@ -1,6 +1,7 @@
 {
     "name": "Snow Clutter",
-    "rarity": 3,
+    "rarity": 1,
+    "maxPicked": 2,
     "minPicked": 1,
     "loot": [
         {
