--- a/loot/global-treasure.json
+++ b/loot/global-treasure.json
@@ -6,7 +6,8 @@
     "loot": [
         {
             "type": "diamond",
-            "maxamount": 2,
+            "maxamount": 1,
+            "minAmount": 0,
             "slottypes": "STORAGE"
         },
         {
