--- a/loot/cold-treasure.json
+++ b/loot/cold-treasure.json
@@ -23,11 +23,13 @@
         {
             "type": "emerald_block",
             "maxamount": 1,
+            "rarity": 10,
             "slottypes": "STORAGE"
         },
         {
             "type": "iron_block",
             "maxamount": 3,
+            "rarity": 10,
             "slottypes": "STORAGE"
         },
         {
