--- a/loot/cold-treasure.json
+++ b/loot/cold-treasure.json
@@ -1,11 +1,17 @@
 {
     "name": "Cold Treasure",
     "rarity": 1,
-    "maxPicked": 1,
+    "maxPicked": 2,
     "minPicked": 1,
     "loot": [
         {
             "type": "iron_nugget",
+            "maxAmount": 4,
+            "minAmount": 2,
+            "slotTypes": "STORAGE"
+        },
+        {
+            "type": "tinted_glass",
             "maxAmount": 4,
             "minAmount": 2,
             "slotTypes": "STORAGE"
