--- a/loot/global-treasure.json
+++ b/loot/global-treasure.json
@@ -1,17 +1,19 @@
 {
     "name": "Global Treasure",
     "rarity": 1,
-    "maxPicked": 1,
-    "minPicked": 1,
+    "maxPicked": 2,
+    "minPicked": 0,
     "loot": [
         {
             "type": "diamond",
-            "maxamount": 1,
+            "maxamount": 3,
+            "rarity": 2,
             "slottypes": "STORAGE"
         },
         {
             "type": "ender_pearl",
-            "maxamount": 1,
+            "maxamount": 2,
+            "rarity": 2,
             "slottypes": "STORAGE"
         },
         {
@@ -21,12 +23,14 @@
         },
         {
             "type": "obsidian",
-            "maxamount": 1,
+            "maxamount": 4,
+            "rarity": 2,
             "slottypes": "STORAGE"
         },
         {
             "type": "iron_ingot",
-            "maxamount": 3,
+            "maxamount": 4,
+            "rarity": 2,
             "slottypes": "STORAGE"
         },
         {
