--- a/loot/hot-treasure.json
+++ b/loot/hot-treasure.json
@@ -1,7 +1,7 @@
 {
     "name": "Hot Treasure",
     "rarity": 1,
-    "maxPicked": 1,
+    "maxPicked": 2,
     "minPicked": 1,
     "loot": [
         {
@@ -25,7 +25,13 @@
             "slotTypes": "STORAGE"
         },
         {
+            "type": "tnt",
+            "maxAmount": 1,
+            "slotTypes": "STORAGE"
+        },
+        {
             "type": "golden_boots",
+            "rarity": 5,
             "maxAmount": 1,
             "minDurability": 0.93,
             "maxDurability": 1,
