--- a/loot/snow-clutter.json
+++ b/loot/snow-clutter.json
@@ -1,8 +1,8 @@
 {
     "name": "Snow Clutter",
     "rarity": 1,
-    "maxPicked": 1,
-    "minPicked": 1,
+    "maxPicked": 2,
+    "minPicked": 0,
     "loot": [
         {
             "type": "snowball",
@@ -17,6 +17,22 @@
         {
             "type": "blue_ice",
             "maxAmount": 2,
+            "rarity": 2,
+            "slotTypes": "STORAGE"
+        },
+        {
+            "type": "ice",
+            "maxAmount": 2,
+            "slotTypes": "STORAGE"
+        },
+        {
+            "type": "white_stained_glass",
+            "maxAmount": 5,
+            "slotTypes": "STORAGE"
+        },
+        {
+            "type": "soul_torch",
+            "maxAmount": 3,
             "slotTypes": "STORAGE"
         }
     ]
