--- a/loot/tropical-treasure.json
+++ b/loot/tropical-treasure.json
@@ -1,98 +1,208 @@
 {
     "name": "Tropical Treasure",
     "rarity": 1,
-    "maxPicked": 2,
-    "minPicked": 0,
+    "maxPicked": 1,
+    "minPicked": 1,
     "loot": [
         {
-            "type": "raw_copper",
-            "maxamount": 5,
-            "minAmount": 1,
-            "rarity": 1,
-            "slottypes": "STORAGE"
-        },
-        {
-            "type": "quartz",
-            "maxamount": 5,
-            "minAmount": 1,
-            "rarity": 1,
-            "slottypes": "STORAGE"
-        },
-        {
-            "type": "trident",
-            "maxamount": 5,
-            "minAmount": 1,
-            "rarity": 5,
-            "slottypes": "STORAGE"
-        },
-        {
-            "type": "glow_berries",
-            "maxamount": 5,
-            "minAmount": 1,
-            "rarity": 1,
-            "slottypes": "STORAGE"
-        },
-        {
-            "type": "scute",
-            "maxamount": 3,
-            "minAmount": 2,
-            "rarity": 2,
-            "slottypes": "STORAGE"
-        },
-        {
-            "type": "raw_copper",
-            "maxamount": 5,
-            "minAmount": 1,
-            "rarity": 1,
-            "slottypes": "STORAGE"
-        },
-        {
-            "type": "heart_of_the_sea",
+            "type": "wooden_pickaxe",
             "maxamount": 1,
-            "minAmount": 1,
-            "rarity": 5,
+            "mindurability": 0.2,
+            "maxdurability": 0.8,
             "slottypes": "STORAGE"
         },
         {
-            "type": "axolotl_bucket",
-            "maxamount": 5,
-            "minAmount": 1,
-            "rarity": 1,
+            "type": "flint_and_steel",
+            "maxamount": 1,
+            "mindurability": 0.2,
+            "maxdurability": 0.8,
+            "slottypes": "STORAGE"
+        }
+        ,{
+            "type": "shears",
+            "maxamount": 1,
+            "mindurability": 0.2,
+            "maxdurability": 0.8,
             "slottypes": "STORAGE"
         },
         {
-            "type": "totem_of_undying",
-            "maxamount": 5,
-            "minAmount": 1,
-            "rarity": 3,
+            "type": "bow",
+            "maxamount": 1,
+            "mindurability": 0.4,
+            "maxdurability": 0.8,
             "slottypes": "STORAGE"
         },
         {
-            "type": "sea_lantern",
-            "maxamount": 5,
-            "minAmount": 1,
-            "rarity": 1,
+            "type": "arrow",
+            "maxamount": 21,
             "slottypes": "STORAGE"
         },
         {
-            "type": "glow_ink_sac",
-            "maxamount": 5,
-            "minAmount": 1,
-            "rarity": 1,
+            "type": "stone_pickaxe",
+            "maxamount": 1,
+            "mindurability": 0.4,
+            "maxdurability": 0.8,
             "slottypes": "STORAGE"
         },
         {
-            "type": "prismarine_shard",
-            "maxamount": 5,
-            "minAmount": 1,
-            "rarity": 2,
+            "type": "iron_pickaxe",
+            "maxamount": 1,
+            "mindurability": 0.5,
+            "maxdurability": 0.8,
             "slottypes": "STORAGE"
         },
         {
-            "type": "prismarine_crystals",
-            "maxamount": 5,
-            "minAmount": 1,
-            "rarity": 2,
+            "type": "diamond_pickaxe",
+            "maxamount": 1,
+            "mindurability": 0.6,
+            "maxdurability": 0.8,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "golden_pickaxe",
+            "maxamount": 1,
+            "mindurability": 0.5,
+            "maxdurability": 0.9,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "wooden_sword",
+            "maxamount": 1,
+            "mindurability": 0.2,
+            "maxdurability": 0.8,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "stone_sword",
+            "maxamount": 1,
+            "mindurability": 0.4,
+            "maxdurability": 0.8,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "iron_sword",
+            "maxamount": 1,
+            "mindurability": 0.5,
+            "maxdurability": 0.8,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "diamond_sword",
+            "maxamount": 1,
+            "mindurability": 0.6,
+            "maxdurability": 0.8,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "golden_sword",
+            "maxamount": 1,
+            "mindurability": 0.5,
+            "maxdurability": 0.9,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "wooden_axe",
+            "maxamount": 1,
+            "mindurability": 0.2,
+            "maxdurability": 0.8,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "stone_axe",
+            "maxamount": 1,
+            "mindurability": 0.4,
+            "maxdurability": 0.8,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "iron_axe",
+            "maxamount": 1,
+            "mindurability": 0.5,
+            "maxdurability": 0.8,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "diamond_axe",
+            "maxamount": 1,
+            "mindurability": 0.6,
+            "maxdurability": 0.8,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "golden_axe",
+            "maxamount": 1,
+            "mindurability": 0.5,
+            "maxdurability": 0.9,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "wooden_hoe",
+            "maxamount": 1,
+            "mindurability": 0.2,
+            "maxdurability": 0.8,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "stone_hoe",
+            "maxamount": 1,
+            "mindurability": 0.4,
+            "maxdurability": 0.8,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "iron_hoe",
+            "maxamount": 1,
+            "mindurability": 0.5,
+            "maxdurability": 0.8,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "diamond_hoe",
+            "maxamount": 1,
+            "mindurability": 0.6,
+            "maxdurability": 0.8,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "golden_hoe",
+            "maxamount": 1,
+            "mindurability": 0.5,
+            "maxdurability": 0.9,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "wooden_shovel",
+            "maxamount": 1,
+            "mindurability": 0.2,
+            "maxdurability": 0.8,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "stone_shovel",
+            "maxamount": 1,
+            "mindurability": 0.4,
+            "maxdurability": 0.8,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "iron_shovel",
+            "maxamount": 1,
+            "mindurability": 0.5,
+            "maxdurability": 0.8,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "diamond_shovel",
+            "maxamount": 1,
+            "mindurability": 0.6,
+            "maxdurability": 0.8,
+            "slottypes": "STORAGE"
+        },
+        {
+            "type": "golden_shovel",
+            "maxamount": 1,
+            "mindurability": 0.5,
+            "maxdurability": 0.9,
             "slottypes": "STORAGE"
         }
     ]
