--- a/loot/hot-treasure.json
+++ b/loot/hot-treasure.json
@@ -1,7 +1,7 @@
 {
     "name": "Hot Treasure",
     "rarity": 1,
-    "maxPicked": 1,
+    "maxPicked": 2,
     "minPicked": 1,
     "loot": [
         {
@@ -25,57 +25,47 @@
             "slotTypes": "STORAGE"
         },
         {
+            "type": "tnt",
+            "maxAmount": 1,
+            "slotTypes": "STORAGE"
+        },
+        {
             "type": "golden_boots",
+            "rarity": 5,
             "maxAmount": 1,
             "minDurability": 0.93,
             "maxDurability": 1,
             "displayName": "Golden Dashers",
             "lore": [
-                "Dash around with these boots so long",
-                "as they dont get damaged. Also enjoy",
-                "less health and armor while doing so."
-            ],
-            "enchantments": [{
-                "enchantment": "SOUL_SPEED",
-                "maxLevel": 5,
-                "minLevel": 3
-            }],
+                "Dash around with these boots so long","as they dont get damaged. Also enjoy","less health and armor while doing so."],
+            "enchantments": [
+                {
+                    "enchantment": "SOUL_SPEED",    "maxLevel": 5,
+                    "minLevel": 3
+                }],
             "attributes": [
                 {
-                    "attribute": "GENERIC_MOVEMENT_SPEED",
-                    "operation": "ADD_NUMBER",
-                    "maxAmount": 0.35,
+                    "attribute": "GENERIC_MOVEMENT_SPEED",    "operation": "ADD_NUMBER",    "maxAmount": 0.35,
                     "minAmount": 0.2,
                     "name": "SPUDD"
                 },
                 {
-                    "attribute": "GENERIC_ATTACK_SPEED",
-                    "operation": "ADD_NUMBER",
-                    "maxAmount": 0.1,
+                    "attribute": "GENERIC_ATTACK_SPEED",    "operation": "ADD_NUMBER",    "maxAmount": 0.1,
                     "minAmount": 0.05,
                     "name": "ATTAKK"
                 },
                 {
-                    "attribute": "GENERIC_MAX_HEALTH",
-                    "operation": "ADD_NUMBER",
-                    "maxAmount": -7,
+                    "attribute": "GENERIC_MAX_HEALTH",    "operation": "ADD_NUMBER",    "maxAmount": -7,
                     "minAmount": -5,
                     "name": "ATTAKK"
                 },
                 {
-                    "attribute": "GENERIC_ARMOR",
-                    "operation": "MULTIPLY_SCALAR_1",
-                    "maxAmount": -0.3,
+                    "attribute": "GENERIC_ARMOR",    "operation": "MULTIPLY_SCALAR_1",    "maxAmount": -0.3,
                     "minAmount": -0.08,
                     "name": "NOARM"
-                }
-            ],
+                }],
             "itemFlags": [
-                "HIDE_ATTRIBUTES",
-                "HIDE_ENCHANTS",
-                "HIDE_PLACED_ON",
-                "HIDE_POTION_EFFECTS"
-            ],
+                "HIDE_ATTRIBUTES","HIDE_ENCHANTS","HIDE_PLACED_ON","HIDE_POTION_EFFECTS"],
             "slotTypes": "STORAGE"
         }
     ]
