--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -7,35 +7,43 @@ body:
       value: |
         Thank you for taking the time to fill this out!
   - type: textarea
-    id: what
+    id: how
     attributes:
-      label: What happened?
-      description: Please give a text description of the issue. You should copy-paste screenshots in here.
-      placeholder: Tell us what you see!
+      label: Describe the problem
+      description: Please give a text description of what you think the problem is
+      placeholder: This broke... This object... This biome... at these coords. maybe this seed:123456789
     validations:
       required: true
   - type: textarea
-    id: how
+    id: what
     attributes:
-      label: What should happen?
-      description: Please give a text description of what you think the problem is
-      placeholder: Tell us what you want to see!
+      label: What Should Happen
+      description: Please give a text description of what you think should be happening
+      placeholder: the leaves should not be placed here
     validations:
       required: true
   - type: input
     id: biome
     attributes:
-      label: Biome
+      label: What Biome
       description: Which biome are you experiencing issues in? Use `/iris what biome` and send the full text here. If this is not related to a biome, omit this.
-      placeholder: IBiome ..... (.....)
+      placeholder: Mosaic/Lith/Black
+  - type: input
+    id: Object-Id
+    attributes:
+      label: Object Id
+      description: What object are you talking about? (Use /iris object dust, and right click on the structure thats misbehaving) and send a screenshot link (imgur or related)
+      placeholder: Ships/Generic-1@5976587650987...
   - type: dropdown
     id: mcversion
     attributes:
       label: Minecraft Version
       description: What version of Minecraft are you running?
       options:
-        - 1.14 - 1.16.5
-        - 1.17
+        - 1.14 
+        - 1.15
+        - 1.16
+        - 1.17+
     validations:
       required: true
   - type: dropdown
@@ -44,21 +52,23 @@ body:
       label: Iris Version
       description: What version of Iris are you running?
       options:
+        - Earlier-or-Not-supported
         - 1.3.9
         - 1.3.10-FINAL
         - 1.3.11-FINAL
         - 1.4.1
-        - 1.4.2
-        - 1.4.3
-        - 1.4.4
+        - 1.4.7
+        - 1.4.8
+        - 1.4.9
+        - More Current Other
     validations:
       required: true
   - type: input
     id: logs
     attributes:
-      label: Relevant log output.
-      description: If there are no errors in the log, you may omit this. Always use [mclogs](https://mclo.gs) to protect your IPs.
-      placeholder: https://mclo.gs/.......
+      label: Relevant log output. (IF APPLICABLE)
+      description: If there are no errors in the log, you may omit this. Always use [mclogs](https://mclo.gs) Or [Pastebin](https://pastebin.com/) If the log is partial, or incomplete, your issue will be closed without any warning and ignored
+      placeholder: https://Link/to/your/FULL/log
   - type: checkboxes
     id: checksum
     attributes:
