--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -32,7 +32,7 @@ body:
     id: Object-Id
     attributes:
       label: Object Id
-      description: What object are you talking about? (Use /iris object dust, and right click on the structure thats misbehaving) and send a screenshot link (imgur or related)
+      description: What object are you talking about? (Use `/iris object dust`, and right click on the structure thats misbehaving) and send a screenshot link (imgur or related)
       placeholder: Ships/Generic-1@5976587650987...
   - type: dropdown
     id: mcversion
