--- a/.github/ISSUE_TEMPLATE/feature.yml
+++ b/.github/ISSUE_TEMPLATE/feature.yml
@@ -1,33 +1,42 @@
 name: Overworld Feature Request
-description: File a feature request for the Iris Dimensions Overworld
+description: File a feature request for the Iris Dimensions Overworld, If you want to report a bug this is not the place
 labels: [feature]
 body:
   - type: markdown
     attributes:
       value: |
         Thank you for taking the time to fill this out!
-  - type: textarea
-    id: what
+  - type: dropdown
+    id: mcversion
     attributes:
-      label: How does it looks now?
-      description: Please give a text description of the current state. You should copy-paste screenshots in here.
-      placeholder: Tell us what you see!
+      label: Adding, Removing, or Changing
+      description: What are you doing
+      options:
+        - Adding
+        - Removing
+        - Changing
+    validations:
+      required: true
+  - type: dropdown
+    id: mcversion
+    attributes:
+      label: Type of Modification
+      description: What Is it
+      options:
+        - Biome / Region
+        - Object
+        - Jigsaw
+        - Other
     validations:
       required: true
   - type: textarea
-    id: how
+    id: desc
     attributes:
-      label: What should improve?
-      description: Please give a text description of what you think a suitable improvement should be
-      placeholder: Tell us what you want to see!
+      label: What are you trying to modify
+      description: Give as detailed of a description as you can for the modification that you want done (include pictures if applicable)
+      placeholder: Remove those honey blocks from.....
     validations:
       required: true
-  - type: input
-    id: biome
-    attributes:
-      label: Biome
-      description: Which biome are you talking about? Use `/iris what biome` and send the full text here. If this is not related to a biome, omit this.
-      placeholder: IBiome ..... (.....)
   - type: dropdown
     id: mcversion
     attributes:
@@ -35,22 +44,7 @@ body:
       description: What version of Minecraft are you running?
       options:
         - 1.14 - 1.16.5
-        - 1.17
-    validations:
-      required: true
-  - type: dropdown
-    id: irisversion
-    attributes:
-      label: Iris Version
-      description: What version of Iris are you running?
-      options:
-        - 1.3.9
-        - 1.3.10-FINAL
-        - 1.3.11-FINAL
-        - 1.4.1
-        - 1.4.2
-        - 1.4.3
-        - 1.4.4
+        - 1.17+
     validations:
       required: true
   - type: checkboxes
@@ -59,11 +53,9 @@ body:
       label: Checklist
       description: Please ensure you meet each of the requirements below
       options:
-        - label: I am using an unmodified version of the overworld. (If you modified the overworld and would like to still report, contact [support](discord.gg/volmit))
+        - label: I am using an unmodified version of the overworld. (If you modified the overworld but know the content suggestion is valid)
           required: true
         - label: I am using [the latest version of the overworld](../) **OR** I have made sure this feature was not already implemented in the latest version.
-          required: true
-        - label: I am using Spigot, Paper, Tuinity, or Purpur. (If you are not, and still think it is a valid request, contact [support](discord.gg/volmit))
           required: true
   - type: markdown
     id: thanks
