--- a/.github/ISSUE_TEMPLATE/feature.yml
+++ b/.github/ISSUE_TEMPLATE/feature.yml
@@ -7,7 +7,7 @@ body:
       value: |
         Thank you for taking the time to fill this out!
   - type: dropdown
-    id: mcversion
+    id: arc
     attributes:
       label: Adding, Removing, or Changing
       description: What are you doing
@@ -18,7 +18,7 @@ body:
     validations:
       required: true
   - type: dropdown
-    id: mcversion
+    id: atype
     attributes:
       label: Type of Modification
       description: What Is it
