--- a/.github/ISSUE_TEMPLATE/feature.yml
+++ b/.github/ISSUE_TEMPLATE/feature.yml
@@ -50,6 +50,7 @@ body:
     attributes:
       label: Iris Version
       description: What version of Iris are you running? (see console)
+      placeholder: DO NOT SAY "LATEST"
     validations:
       required: true
   - type: checkboxes
