--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -47,6 +47,7 @@ body:
     attributes:
       label: Iris Version
       description: What version of Iris are you running? (see console)
+      placeholder: DO NOT SAY "LATEST"
     validations:
       required: true
   - type: input
