--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -27,7 +27,7 @@ body:
     attributes:
       label: What Biome
       description: Which biome are you experiencing issues in? Use `/iris what biome` and send the full text here. If this is not related to a biome, omit this.
-      placeholder: Mosaic/Lith/Black
+      placeholder: clutter/concretelith1
   - type: input
     id: Object-Id
     attributes:
