with good faith. first try? maybe. a man can dream

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -33,7 +33,7 @@ body:
     attributes:
       label: Object Id
       description: What object are you talking about? (Use `/iris object dust`, and right click on the structure thats misbehaving) and send a screenshot link (imgur or related)
-      placeholder: Ships/Generic-1@5976587650987...
+      placeholder: objects/structures/generic1@5976587650987...
   - type: input
     id: mcversion
     attributes:
