--- a/jigsaw-pieces/village/snowy/houses/snowy_fletcher_house_1.json
+++ b/jigsaw-pieces/village/snowy/houses/snowy_fletcher_house_1.json
@@ -61,7 +61,7 @@
             "y": -1,
             "z": 0
         },
-        "mode": "FAST_MAX_HEIGHT",
+        "mode": "STILT",
         "carvingSupport": "SURFACE_ONLY",
         "snow": 0,
         "underwater": false,
