--- a/jigsaw-pieces/village/snowy/houses/snowy_small_house_8.json
+++ b/jigsaw-pieces/village/snowy/houses/snowy_small_house_8.json
@@ -76,7 +76,7 @@
             "y": -2,
             "z": 0
         },
-        "mode": "FAST_MAX_HEIGHT",
+        "mode": "STILT",
         "carvingSupport": "SURFACE_ONLY",
         "snow": 0,
         "underwater": false,
