--- a/loot/hot-treasure.json
+++ b/loot/hot-treasure.json
@@ -15,18 +15,18 @@
             "slotTypes": "STORAGE"
         },
         {
-            "type": "gold_nugget",
-            "maxAmount": 8,
+            "type": "blaze_rod",
+            "maxAmount": 1,
             "slotTypes": "STORAGE"
         },
         {
             "type": "blaze_powder",
-            "maxAmount": 1,
+            "maxAmount": 10,
             "slotTypes": "STORAGE"
         },
         {
             "type": "tnt",
-            "maxAmount": 1,
+            "maxAmount": 5,
             "slotTypes": "STORAGE"
         },
         {
@@ -45,6 +45,18 @@
                 "enchantment": "SOUL_SPEED",
                 "maxLevel": 3,
                 "minLevel": 2
+            },
+            {
+
+                "enchantment": "BINDING_CURSE",
+                "maxLevel": 1,
+                "minLevel": 1
+            },
+            {
+
+                "enchantment": "VANISHING_CURSE",
+                "maxLevel": 1,
+                "minLevel": 1
             }],
             "attributes": [
                 {
