--- a/loot/cold/treasure.json
+++ b/loot/cold/treasure.json
@@ -78,12 +78,12 @@
             ],
             "enchantments": [
                 {
-                    "enchantment": "PROTECTION_EXPLOSIONS",
+                    "enchantment": "blast_protection",
                     "maxLevel": 7,
                     "minLevel": 3
                 },
                 {
-                    "enchantment": "PROTECTION_FIRE",
+                    "enchantment": "fire_protection",
                     "maxLevel": 7,
                     "minLevel": 3
                 }
